# dfaudit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
examples/: README.md
src/dfaudit/: __init__.py  config.py  plots.py  report.py  summary.py  utils.py
src/dfaudit/plotting/: __init__.py  correlation.py  distributions.py  missingness.py
src/dfaudit/styles/: __init__.py  overview.py
tests/: __init__.py  test_public_api.py
