[project]
name = "dfaudit"
version = "0.1.0"
description = "Modern dataframe auditing visuals built with pandas and matplotlib."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
