[project]
name = "dfaudit"
version = "0.1.0"
description = "Modern dataframe auditing visuals built with pandas and matplotlib."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ivan Kumeyko", email = "ivan@ivankmk.tech" }]
requires-python = ">=3.10"
keywords = [
    "pandas", "dataframe", "data quality", "data audit", "data profiling",
    "missing data", "exploratory data analysis", "eda", "data validation",
    "data summary", "notebook", "jupyter", "matplotlib", "visualization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/ivankmk/dfaudit"
Repository = "https://github.com/ivankmk/dfaudit"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
